--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=sop' async='async'></script>
+    
+    <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=sop'
+        async='async'></script>
 
 </head>
 
@@ -102,4 +103,4 @@
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
     <script src=“//platform-api.sharethis.com/js/sharethis.js#property=&product=inline-share-buttons”> </script> </body>
-        </html>
+</html>
