--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=sop'async='async'></script>
+    <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=inline-share-buttons"></script>
 
 </head>
 
@@ -100,5 +100,7 @@
     </footer>
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
-    <script src=“//platform-api.sharethis.com/js/sharethis.js#property=&product=inline-share-buttons”> </script> </body>
+    <script src=“//platform-api.sharethis.com/js/sharethis.js#property=&product=inline-share-buttons”></script>
+    
+</body>
 </html>
