--- a/index.html
+++ b/index.html
@@ -1,41 +1,82 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Project-1</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=inline-share-buttons"></script>
+    </head>
+<!--
+    TO DISCUSS:
+    Landing page
+    Navbar - search in nav, coursework materials in footer
+    search - predictive searching (value "chicken" returns "chicken soup", "fried chicken", etc. in dropdown below bar)
+-->
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Project-1</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=inline-share-buttons"></script>
-
-</head>
-
-<body>
-    <!--HEADING-->
-    <header id="mainheader">
-        <div class="container">
-            <a href="index.html" id="logo"><img src="https://i.pinimg.com/236x/33/04/e3/3304e35f47f81180e8c8b896b5d57332--knifes-forks.jpg"
-                    alt="logo" style="width:10%;"></a>
-        </div>
-
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+    <body>
+        <!--HEADING-->
+        <div class="container-fluid">
+            <header class="row">
+                <a href="index.html">
+                    <img src="https://i.pinimg.com/236x/33/04/e3/3304e35f47f81180e8c8b896b5d57332--knifes-forks.jpg" alt="logo" class="logo">IN
+                    OR OUT
+                    <img src="https://i.pinimg.com/236x/33/04/e3/3304e35f47f81180e8c8b896b5d57332--knifes-forks.jpg" alt="logo" class="logo"></a>
+                <nav class="navbar navbar-inverse">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        </div>
+                        <div class="collapse navbar-collapse" id="myNavbar">
+                            <ul class="nav navbar-nav">
+                                <li><a href="index.html">Home</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form id="form">
+                        <label for="search-bar">
+                        <input type="text" id="search-bar">
+                        <input type="submit" id="add-food" class="btn btn-danger" value="Search">
+                    </form>
                 </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                    </ul>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="jumbotron jumbotron-fluid text-center">
+                    <h1 class="display-4">In Or Out</h1>
+                    <p class="lead">Eat Smart. Be Healthy.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column" id="food-data1">
+                    <h2>Food2Fork</h2>
+                    <p><img src="https://www.nrn.com/sites/nrn.com/files/styles/article_featured_standard/public/sonic-mushroom-burger.gif?itok=epnLgURt"
+                            alt="burger" style="width:50%;"></p>
+                </div>
+                <div class="column" id="food-data2">
+                    <h2>Nutritionix</h2>
+                    <p><img src="https://cdn.vox-cdn.com/thumbor/qEn1Dj2MVNnZcj7MhYQ0-DhSFqI=/0x0:1400x1050/1400x1400/filters:focal(0x0:1400x1050):format(jpeg)/cdn.vox-cdn.com/uploads/chorus_image/image/45522676/mcdonalds-fries.0.0.jpg"
+                            alt="fries" style="width:30%;"></p>
+                </div>
+            </div>
+            <div class="sharethis-inline-reaction-buttons"></div>
+            <div class="sharethis-inline-share-buttons"></div>
+            <footer>
+                    &copy; In Or Out
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="https://github.com/kathdoza/project_1"><span class="glyphicon glyphicon-folder-close"></span>
                                 GitHub Repo</a></li>
@@ -44,63 +85,8 @@
                         <li><a href="https://www.nutritionix.com/business/api"><span class="glyphicon glyphicon-log-in"></span>
                                 Nutritionix API</a></li>
                     </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <form id="form">
-                    <label for="search-bar">
-                        <input type="text" id="search-bar">
-                        <input type="submit" id="add-food" class="btn btn-danger" value="Search">
-                </form>
-            </div>
+            </footer>
         </div>
-
-
-        <div class="jumbotron jumbotron-fluid text-center">
-            <div class="container">
-                <h1 class="display-4">In Or Out</h1>
-                <p class="lead">Eat Smart. Be Healthy.</p>
-            </div>
-        </div>
-
-        <br>
-
-
-        <div class="row">
-            <div class="column" id="food-data1">
-                <h2>Food2Fork</h2>
-                <p><img src="https://www.nrn.com/sites/nrn.com/files/styles/article_featured_standard/public/sonic-mushroom-burger.gif?itok=epnLgURt"
-                        alt="burger" style="width:50%;"></p>
-            </div>
-            <div class="column" id="food-data2">
-                <h2>Nutritionix</h2>
-                <p><img src="https://cdn.vox-cdn.com/thumbor/qEn1Dj2MVNnZcj7MhYQ0-DhSFqI=/0x0:1400x1050/1400x1400/filters:focal(0x0:1400x1050):format(jpeg)/cdn.vox-cdn.com/uploads/chorus_image/image/45522676/mcdonalds-fries.0.0.jpg"
-                        alt="fries" style="width:30%;"></p>
-            </div>
-        </div>
-    </div>
-    <div class="sharethis-inline-reaction-buttons"></div>
-    <div class="sharethis-inline-share-buttons"></div>
-
-    </div>
-
-    <br>
-    <br>
-
-
-    <footer>
-        <div class="container">
-            &copy; In Or Out
-        </div>
-    </footer>
-
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
-    <script src=“//platform-api.sharethis.com/js/sharethis.js#property=&product=inline-share-buttons”></script>
-    
-</body>
+        <script type="text/javascript" src="assets/javascript/app.js"></script>
+    </body>
 </html>
