--- a/index.html
+++ b/index.html
@@ -12,21 +12,13 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=inline-share-buttons"></script>
     </head>
-<!--
-    TO DISCUSS:
-    Landing page
-    Navbar - search in nav, coursework materials in footer
-    search - predictive searching (value "chicken" returns "chicken soup", "fried chicken", etc. in dropdown below bar)
--->
 
     <body>
-        <!--HEADING-->
         <div class="container-fluid">
             <header class="row">
                 <a href="index.html">
-                    <img src="https://i.pinimg.com/236x/33/04/e3/3304e35f47f81180e8c8b896b5d57332--knifes-forks.jpg" alt="logo" class="logo">IN
-                    OR OUT
-                    <img src="https://i.pinimg.com/236x/33/04/e3/3304e35f47f81180e8c8b896b5d57332--knifes-forks.jpg" alt="logo" class="logo"></a>
+                    <img id="logo" src="assets/images/logo.png">
+                </a>
                 <nav class="navbar navbar-inverse">
                     <div class="container-fluid">
                         <div class="navbar-header">
@@ -75,6 +67,8 @@
             </div>
             <div class="sharethis-inline-reaction-buttons"></div>
             <div class="sharethis-inline-share-buttons"></div>
+        </div>
+        <div class="container-fluid">
             <footer>
                     &copy; In Or Out
                     <ul class="nav navbar-nav navbar-right">
