get nutritional values for recipe ingredients and post to html

--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="column" id="food-data1">
-                    <h2>Food2Fork</h2>
-                    <p><img src="https://www.nrn.com/sites/nrn.com/files/styles/article_featured_standard/public/sonic-mushroom-burger.gif?itok=epnLgURt"
-                            alt="burger" style="width:50%;"></p>
-                </div>
+                <div class="column" id="recipe-nutrition"></div>
                 <div class="column" id="food-data2">
                     <h2>Nutritionix</h2>
                     <p><img src="https://cdn.vox-cdn.com/thumbor/qEn1Dj2MVNnZcj7MhYQ0-DhSFqI=/0x0:1400x1050/1400x1400/filters:focal(0x0:1400x1050):format(jpeg)/cdn.vox-cdn.com/uploads/chorus_image/image/45522676/mcdonalds-fries.0.0.jpg"
