--- a/index.html
+++ b/index.html
@@ -303,18 +303,20 @@
     </div>
     <!--FOOTER-->
     <div class="container-fluid">
-        <footer>
+            <footer>
             &copy; In Or Out
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/kathdoza/project_1"><span class="glyphicon glyphicon-folder-close"></span>
-                        GitHub Repo</a></li>
-                <li><a href="https://www.food2fork.com/about/api"><span class="glyphicon glyphicon-log-in"></span>
-                        Food2Fork API</a></li>
-                <li><a href="https://www.nutritionix.com/business/api"><span class="glyphicon glyphicon-log-in"></span>
-                        Nutritionix API</a></li>
+            <ul>
+                <a href="https://github.com/kathdoza/project_1"><span class="glyphicon glyphicon-folder-close"></span>
+                GitHub Repo</a>
+    
+                <a href="https://www.food2fork.com/about/api"><span class="glyphicon glyphicon-log-in"></span>
+                Food2Fork API</a>
+    
+                <a href="https://www.nutritionix.com/business/api"><span class="glyphicon glyphicon-log-in"></span>
+                Nutritionix API</a>
             </ul>
-        </footer>
-    </div>
+            </footer>
+        </div>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
