--- a/index.html
+++ b/index.html
@@ -9,49 +9,46 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=inline-share-buttons"></script>
+    <script type="text/javascript"
+        src="https://platform-api.sharethis.com/js/sharethis.js#property=5c55dfb6fec5f10011f261bd&product=inline-share-buttons"></script>
 </head>
 
 <body>
     <!--HEADING-->
-    <div class="container-fluid">
+    <div class="container">
         <header class="row" id="logo">
             <a href="index.html"></a>
         </header>
         <!--NAV-->
         <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html"> <span class="glyphicon glyphicon-home"></span> Home</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="feedback.html"> <span class="glyphicon glyphicon-pencil"></span> Feedback</a></li>
-                    </ul>
-                </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
             </div>
-            <!--SEARCH BAR-->
-            <div class="row text-center">
-                <div class="col-lg-12">
-                    <form id="form">
-                        <label for="search-bar">
-                            <input type="text" id="search-bar">
-                            <input type="submit" id="add-food" class="btn btn-danger" value="Search">
-                            <p id="alert-text"></p>
-                    </form>
-                </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html"> <span class="glyphicon glyphicon-home"></span> Home</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="feedback.html"> <span class="glyphicon glyphicon-pencil"></span> Feedback</a></li>
+                </ul>
             </div>
         </nav>
+        <!--SEARCH BAR-->
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <form id="form">
+                    <label for="search-bar">
+                        <input type="text" id="search-bar">
+                        <input type="submit" id="add-food" class="btn btn-danger" value="Search">
+                        <p id="alert-text"></p>
+                </form>
+            </div>
+        </div>
         <!--JUMBOTRON-->
-    </div>
-    <div class="container">
         <div class="row">
             <div class="jumbotron jumbotron-fluid text-center">
                 <h1 class="display-4">In Or Out</h1>
@@ -59,115 +56,117 @@
             </div>
         </div>
         <!--SEARCH RESULTS AREA-->
-        <div class="row">
-            <h2>In Option</h2>
-            <section class="performance-facts">
-                <header class="performance-facts__header">
-                    <h1 class="performance-facts__title">Nutrition Facts</h1>
-                </header>
-                <table class="performance-facts__table">
-                    <tbody>
-                        <tr>
-                            <th colspan="2">
-                                <div class="nutxCalories">
-                                    <b>Calories</b>
-                                    <span id="recipe-calories"></span>
-                                </div>
+        <div class="row recipe-center">
+            <div class="col col-md-6">
+                <h2>In Option</h2>
+                <section class="performance-facts">
+                    <header class="performance-facts__header">
+                        <h1 class="performance-facts__title">Nutrition Facts</h1>
+                    </header>
+                    <table class="performance-facts__table">
+                        <tbody>
+                            <tr>
+                                <th colspan="2">
+                                    <div class="nutxCalories">
+                                        <b>Calories</b>
+                                        <span id="recipe-calories"></span>
+                                    </div>
 
-                            </th>
-                        </tr>
-                        <tr>
-                            <th colspan="2">
-                                <b>Total Fat</b>
-                                <span id="recipe-total-fat"></span> g
-                            </th>
-                            <td>
-                                <b class="percentage"><span class="nutxFatPerc"></span>%</b>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="blank-cell">
-                            </td>
-                            <th>
-                                Saturated Fat
-                                <span id="recipe-sat-fat"></span>g
-                            </th>
-                            <td>
-                                <b class="percentage"><span class="nutxSatPerc"></span>%</b>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="blank-cell">
-                            </td>
-                            <th>
-                                Trans Fat
-                                <span id="recipe-trans-fat"></span>g
-                            </th>
-                            <td>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th colspan="2">
-                                <b>Cholesterol</b>
-                                <span id="recipe-cholesterol"></span>mg
-                            </th>
-                            <td>
-                                <b class="percentage"><span class="nutxCholPerc"></span>%</b>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th colspan="2">
-                                <b>Sodium</b>
-                                <span id="recipe-sodium"></span>mg
-                            </th>
-                            <td>
-                                <b class="percentage"><span class="nutxSodPerc"></span>%</b>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th colspan="2">
-                                <b>Total Carbohydrate</b>
-                                <span id="recipe-total-carbs"></span></span>g
-                            </th>
-                            <td>
-                                <b class="percentage"><span class="nutxCarbPerc"></span>%</b>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="blank-cell">
-                            </td>
-                            <th>
-                                Dietary Fiber
-                                <span id="recipe-dietary-fiber"></span>g
-                            </th>
-                            <td>
-                                <b class="percentage"><span class="nutxFiberPerc"></span>%</b>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="blank-cell">
-                            </td>
-                            <th>
-                                Sugars
-                                <span id="recipe-sugars"></span>g
-                            </th>
-                            <td>
-                            </td>
-                        </tr>
-                        <tr class="thick-end">
-                            <th colspan="2">
-                                <b>Protein</b>
-                                <span id="recipe-protein"></span>g
-                            </th>
-                            <td>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <p class="small-info">* Percent Daily Values are based on a 2,000 calorie diet. Your daily values
-                    may be higher or lower depending on your calorie needs:</p>
-            </section>
-            <div class="column" id="food-data2">
+                                </th>
+                            </tr>
+                            <tr>
+                                <th colspan="2">
+                                    <b>Total Fat</b>
+                                    <span id="recipe-total-fat"></span> g
+                                </th>
+                                <td>
+                                    <b class="percentage"><span class="nutxFatPerc"></span>%</b>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="blank-cell">
+                                </td>
+                                <th>
+                                    Saturated Fat
+                                    <span id="recipe-sat-fat"></span>g
+                                </th>
+                                <td>
+                                    <b class="percentage"><span class="nutxSatPerc"></span>%</b>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="blank-cell">
+                                </td>
+                                <th>
+                                    Trans Fat
+                                    <span id="recipe-trans-fat"></span>g
+                                </th>
+                                <td>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th colspan="2">
+                                    <b>Cholesterol</b>
+                                    <span id="recipe-cholesterol"></span>mg
+                                </th>
+                                <td>
+                                    <b class="percentage"><span class="nutxCholPerc"></span>%</b>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th colspan="2">
+                                    <b>Sodium</b>
+                                    <span id="recipe-sodium"></span>mg
+                                </th>
+                                <td>
+                                    <b class="percentage"><span class="nutxSodPerc"></span>%</b>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th colspan="2">
+                                    <b>Total Carbohydrate</b>
+                                    <span id="recipe-total-carbs"></span></span>g
+                                </th>
+                                <td>
+                                    <b class="percentage"><span class="nutxCarbPerc"></span>%</b>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="blank-cell">
+                                </td>
+                                <th>
+                                    Dietary Fiber
+                                    <span id="recipe-dietary-fiber"></span>g
+                                </th>
+                                <td>
+                                    <b class="percentage"><span class="nutxFiberPerc"></span>%</b>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="blank-cell">
+                                </td>
+                                <th>
+                                    Sugars
+                                    <span id="recipe-sugars"></span>g
+                                </th>
+                                <td>
+                                </td>
+                            </tr>
+                            <tr class="thick-end">
+                                <th colspan="2">
+                                    <b>Protein</b>
+                                    <span id="recipe-protein"></span>g
+                                </th>
+                                <td>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p class="small-info">* Percent Daily Values are based on a 2,000 calorie diet. Your daily values
+                        may be higher or lower depending on your calorie needs:</p>
+                </section>
+            </div>
+            <div class="col col-md-6">
                 <h2>Out Option</h2>
 
                 <section class="performance-facts">
@@ -305,7 +304,8 @@
         <footer>
             &copy; In Or Out
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/kathdoza/project_1"><span class="glyphicon glyphicon-folder-close"></span>
+                <li><a href="https://github.com/kathdoza/project_1"><span
+                            class="glyphicon glyphicon-folder-close"></span>
                         GitHub Repo</a></li>
                 <li><a href="https://www.food2fork.com/about/api"><span class="glyphicon glyphicon-log-in"></span>
                         Food2Fork API</a></li>
