--- a/feedback.html
+++ b/feedback.html
@@ -17,13 +17,12 @@
 
 <body>
   <!--HEADING-->
-  <div class="container-fluid">
+  <div class="container">
     <header class="row" id="logo">
       <a href="index.html"></a>
     </header>
   <!--NAV-->
     <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
@@ -169,7 +168,7 @@
           // Hide alert after 3 seconds
           setTimeout(function () {
             document.querySelector('.alert').style.display = 'none';
-          }, 5000);
+          }, 3000);
 
           // Clear form
           document.getElementById('feedbackForm').reset();
@@ -180,5 +179,4 @@
       </script>
 
 </body>
-
 </html>
