--- a/feedback.html
+++ b/feedback.html
@@ -17,13 +17,12 @@
 
 <body>
   <!--HEADING-->
-  <div class="container-fluid">
+  <div class="container">
     <header class="row" id="logo">
       <a href="index.html"></a>
     </header>
   <!--NAV-->
     <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
@@ -101,84 +100,9 @@
 
   </div>
 
-      <script src="https://code.jquery.com/jquery.js"></script>
-
-      <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
-
-      <!-- JAVASCRIPT -->
-      <script>
-
-        // Initialize Firebase
-        var config = {
-          apiKey: "AIzaSyCAyeRmzjdQiHl9D7aSjX4JktJs-K6y02I",
-          authDomain: "in-or-out-75042.firebaseapp.com",
-          databaseURL: "https://in-or-out-75042.firebaseio.com",
-          projectId: "in-or-out-75042",
-          storageBucket: "in-or-out-75042.appspot.com",
-          messagingSenderId: "716018681650"
-        };
-
-        firebase.initializeApp(config);
-
-        // Create a variable to reference the database
-        var database = firebase.database();
-
-        var name = "";
-        var feedback = "";
-
-        // Capture Button Click
-        $("#submit-button").on("click", function (event) {
-          // Don't refresh the page!
-          event.preventDefault();
-
-          var name = $("#name-input").val().trim();
-          var feedback = $("#feedback-input").val().trim();
-
-          database.ref().set({
-            name: name,
-            feedback: feedback,
-
-          });
-
-          database.ref().on("value", function (snapshot) {
-
-            // Print the initial data to the console.
-            console.log(snapshot.val());
-
-            // Log the value of the various properties
-            console.log(snapshot.val().name);
-            console.log(snapshot.val().feedback);
-
-            // Output all of the new information into the relevant HTML sections
-            $("#name-display").text(name);
-            $("#feedback-display").text(feedback);
-
-            // Change the HTML
-            $("#displayed-data").text(snapshot.val().name + " | " + snapshot.val().feedback);
-
-            // If any errors are experienced, log them to console.
-          }, function (errorObject) {
-            console.log("The read failed: " + errorObject.code);
-
-
-          });
-
-          // Show alert
-          document.querySelector('.alert').style.display = 'block';
-
-          // Hide alert after 3 seconds
-          setTimeout(function () {
-            document.querySelector('.alert').style.display = 'none';
-          }, 5000);
-
-          // Clear form
-          document.getElementById('feedbackForm').reset();
-
-
-        });
-
-      </script>
-
+  <!--SCRIPT -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+  <script type="text/javascript" src="assets/javascript/feedback.js"></script>
 </body>
-
 </html>
