recipe vals fix

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <section class="performance-facts">
                     <header class="performance-facts__header">
                         <h1 class="performance-facts__title">Nutrition Facts</h1>
+                        <p id="recipe-serving-size">Serving Size </p>
                     </header>
                     <table class="performance-facts__table">
                         <tbody>
@@ -71,8 +72,11 @@
                                         <b>Calories</b>
                                         <span id="recipe-calories"></span>
                                     </div>
-
                                 </th>
+                                <td>
+                                    Calories from Fat
+                                    <span id="recipe-cals-from-fat"></span>
+                                </td>
                             </tr>
                             <tr>
                                 <th colspan="2">
@@ -80,7 +84,7 @@
                                     <span id="recipe-total-fat"></span> g
                                 </th>
                                 <td>
-                                    <b class="percentage"><span class="nutxFatPerc"></span>%</b>
+                                    <b class="percentage"><span id="recipe-fat-cals"></span>%</b>
                                 </td>
                             </tr>
                             <tr>
@@ -91,7 +95,7 @@
                                     <span id="recipe-sat-fat"></span>g
                                 </th>
                                 <td>
-                                    <b class="percentage"><span class="nutxSatPerc"></span>%</b>
+                                    <b class="percentage"><span id="recipe-satfat-cals"></span>%</b>
                                 </td>
                             </tr>
                             <tr>
@@ -110,7 +114,7 @@
                                     <span id="recipe-cholesterol"></span>mg
                                 </th>
                                 <td>
-                                    <b class="percentage"><span class="nutxCholPerc"></span>%</b>
+                                    <b class="percentage"><span id="recipe-chol-cals"></span>%</b>
                                 </td>
                             </tr>
                             <tr>
@@ -119,7 +123,7 @@
                                     <span id="recipe-sodium"></span>mg
                                 </th>
                                 <td>
-                                    <b class="percentage"><span class="nutxSodPerc"></span>%</b>
+                                    <b class="percentage"><span id="#recipe-sod-cals"></span>%</b>
                                 </td>
                             </tr>
                             <tr>
@@ -128,7 +132,7 @@
                                     <span id="recipe-total-carbs"></span></span>g
                                 </th>
                                 <td>
-                                    <b class="percentage"><span class="nutxCarbPerc"></span>%</b>
+                                    <b class="percentage"><span id="recipe-carb-cals"></span>%</b>
                                 </td>
                             </tr>
                             <tr>
@@ -139,7 +143,7 @@
                                     <span id="recipe-dietary-fiber"></span>g
                                 </th>
                                 <td>
-                                    <b class="percentage"><span class="nutxFiberPerc"></span>%</b>
+                                    <b class="percentage"><span id="recipe-fiber-cals"></span>%</b>
                                 </td>
                             </tr>
                             <tr>
